# rust-macos-ocr

./: Cargo.toml  OCRBridge.h  OCRBridge.m  README.md  build.rs  lib.rs  main.rs
