[package]
name = "vision-ocr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"


[[bin]]
name = "vision_ocr"
path = "main.rs"

[lib]
name = "vision_ocr"
path = "lib.rs"
